# pi_ws

install/: local_setup.sh  setup.sh
install/bevbot_arduino/share/bevbot_arduino/: bevbot_arduino.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/depthai-ros/share/depthai-ros/: local_setup.sh  package.sh
install/depthai_bridge/share/depthai_bridge/: package.sh
install/depthai_descriptions/share/depthai_descriptions/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/depthai_examples/lib/depthai_examples/: crop_control_service
install/depthai_examples/share/depthai_examples/: local_setup.sh  package.sh
install/depthai_filters/share/depthai_filters/: local_setup.sh  package.sh
install/depthai_ros_driver/share/depthai_ros_driver/: package.dsv  package.ps1  package.sh
install/depthai_ros_msgs/share/depthai_ros_msgs/: package.dsv  package.ps1  package.sh
install/ros2_control_demo_description/share/ros2_control_demo_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+2 more)
log/: latest_build
src/bevbot_arduino/: CMakeLists.txt  README.md  bevbot_arduino.xml
src/bevbot_arduino/bringup/config/: diffbot_controllers.yaml
src/bevbot_arduino/bringup/launch/: diffbot.launch.py  joystick.launch.py
src/bevbot_arduino/description/launch/: view_robot.launch.py
src/bevbot_arduino/description/ros2_control/: diffbot.ros2_control.xacro
src/bevbot_arduino/description/urdf/: bevbot_core.xacro  camera.xacro  depth_camera.xacro  diffbot.urdf.xacro  lidar.xacro
src/bevbot_arduino/doc/: userdoc.rst
src/bevbot_arduino/hardware/: diffbot_system.cpp
src/bevbot_arduino/hardware/include/bevbot_arduino/: diffbot_system.hpp  visibility_control.h
src/bevbot_arduino/test/: test_urdf_xacro.py  test_view_robot_launch.py
src/example_2/hardware/: diffbot_system.cpp
(+160 files in other folders)
